v0.2.3
======
* check method renamed as getAttributeValues, and using dirApply