@@ -1,4 +1,4 @@
-# Generated by roxygen2 (4.1.1): do not edit by hand
+# Generated by roxygen2 (4.1.0): do not edit by hand
 
 export(as.package)
 export(characterCount)
@@ -37,4 +37,5 @@ import(XML)
 import(methods)
 import(parallel)
 importFrom(slam,simple_triplet_matrix)
+importFrom(stringi,stri_enc_detect)
 importFrom(stringi,stri_locate_all_regex)
