@@ -1,4 +1,4 @@
-% Generated by roxygen2 (4.1.1): do not edit by hand
+% Generated by roxygen2 (4.1.0): do not edit by hand
 % Please edit documentation in R/adjustEncoding_method.R
 \docType{methods}
 \name{adjustEncoding}
@@ -10,10 +10,10 @@
 adjustEncoding(.Object, ...)
 
 \S4method{adjustEncoding}{character}(.Object, targetDir = NULL, from = NULL,
-  to, ...)
+  to, xml = FALSE, ...)
 
 \S4method{adjustEncoding}{ctkPipe}(.Object, sourceDir, targetDir,
-  from = "UTF-8", to = "ISO-8859-1", ...)
+  from = "UTF-8", to = "ISO-8859-1", xml = FALSE, ...)
 }
 \arguments{
 \item{.Object}{a character string providing a directory}
