@@ -1,4 +1,4 @@
-% Generated by roxygen2 (4.1.1): do not edit by hand
+% Generated by roxygen2 (4.1.0): do not edit by hand
 % Please edit documentation in R/ctkPipe_class.R, R/ctkPipe_class_methods.R, R/cwbImport_method.R, R/describeDir_method.R, R/findReplace_method.R, R/fixVrt_method.R, R/init_method.R, R/rsync_method.R, R/sAttributeList_method.R, R/tokenizeSentences_method.R, R/treetagger_method.R, R/xslt_method.R
 \docType{methods}
 \name{ctkPipe}
@@ -35,7 +35,7 @@ ctkPipe(projectDir)
 
 \S4method{summary}{ctkPipe}(object)
 
-\S4method{cwbImport}{ctkPipe}(.Object, corpus, sourceDir, xml = TRUE,
+\S4method{cwbImport}{ctkPipe}(.Object, sourceDir, corpus, xml = TRUE,
   verbose = TRUE, ...)
 
 \S4method{describeDir}{ctkPipe}(object, dirDesc)
@@ -44,30 +44,22 @@ ctkPipe(projectDir)
   pattern = NULL, mc = FALSE, progress = TRUE, verbose = FALSE,
   sample = FALSE, files = NULL, continue = FALSE, failsafe = FALSE, ...)
 
-\S4method{fixVrt}{ctkPipe}(.Object, sourceDir, targetDir, pattern = NULL,
-  mc = FALSE, progress = TRUE, verbose = FALSE, sample = FALSE,
-  files = NULL, continue = FALSE, failsafe = FALSE)
+\S4method{fixVrt}{ctkPipe}(.Object, sourceDir, targetDir, ...)
 
 \S4method{init}{ctkPipe}(object)
 
 \S4method{rsync}{ctkPipe}(object)
 
-\S4method{sAttributeList}{ctkPipe}(.Object, sourceDir, mc = TRUE)
+\S4method{sAttributeList}{ctkPipe}(.Object, sourceDir, ...)
 
 \S4method{tokenizeSentences}{ctkPipe}(.Object, sourceDir = "xml",
   targetDir = "xmlAnno", targetElement = "p", para = FALSE, mc = FALSE,
   verbose = FALSE, progress = TRUE)
 
 \S4method{treetagger}{ctkPipe}(.Object, sourceDir = "xml",
-  targetDir = "vrt", py = FALSE, parallel = FALSE, lang = "de",
-  fix = FALSE, verbose = TRUE, pattern = "xml", mc = FALSE,
-  continue = FALSE, progress = FALSE, sample = FALSE, files = NULL,
-  failsafe = FALSE)
+  targetDir = "vrt", py = FALSE, lang = "de", ...)
 
-\S4method{xslt}{ctkPipe}(.Object, sourceDir, targetDir, xslFile,
-  pattern = "xml", mc = FALSE, verbose = TRUE, continue = FALSE,
-  progress = FALSE, sample = FALSE, filenames = NULL, failsafe = FALSE,
-  ...)
+\S4method{xslt}{ctkPipe}(.Object, sourceDir, targetDir, xslFile, ...)
 }
 \arguments{
 \item{projectDir}{the directory with the project}
