@@ -1,13 +1,11 @@
-% Generated by roxygen2 (4.1.1): do not edit by hand
+% Generated by roxygen2 (4.1.0): do not edit by hand
 % Please edit documentation in R/fixVrt_method.R
-\docType{methods}
-\name{fixVrt,character-method}
+\name{fixVrt}
 \alias{fixVrt}
-\alias{fixVrt,character-method}
 \alias{fixVrt-method}
 \title{correct/polish vrt files}
 \usage{
-\S4method{fixVrt}{character}(.Object)
+fixVrt(.Object, ...)
 }
 \arguments{
 \item{.Object}{a character vector providing a directory with vrt files}
